--- a/workspace/sprint4-AlejandroOsores/package.json
+++ b/workspace/sprint4-AlejandroOsores/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "build": "npx tsc ./src/index.ts outDir ./dist/",
+    "build": "npx tsc",
     "dev": "npx ts-node ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
